src/css/window.css
div.window {
    @apply absolute p-4 z-[20000];
    @apply bg-base-200 min-w-[512px] min-h-[128px];
    @apply flex flex-col;
    box-shadow: inset -2px -2px 0 0 var(--base-900),
        inset 2px 2px 0 0 var(--base-200),
        inset -4px -4px 0 0 var(--base-300),
        inset 4px 4px 0 0 var(--base-100);

    div.window-title-bar {
        @apply h-16 min-h-16 flex flex-row justify-between items-center px-2;
        @apply bg-base-300 text-base-200 font-bold text-lg;

        div.window-title {
            @apply flex flex-row items-center gap-2;
            img {
                @apply w-12 h-12;
            }
        }

        div.window-controls {
            @apply flex flex-row items-center gap-2;
            button.window-control {
                @apply w-12 h-12 p-0 pr-1 pb-1;
                @apply flex justify-center items-center;
                img {
                    @apply w-6 h-6;
                }
            }
        }
    }

    div.window-resize {
        @apply absolute;
        &.window-resize-tl, &.window-resize-tr, &.window-resize-bl, &.window-resize-br { @apply w-8 h-8; }
        &.window-resize-tl, &.window-resize-t, &.window-resize-tr { @apply top-0; }
        &.window-resize-bl, &.window-resize-b, &.window-resize-br { @apply bottom-0; }
        &.window-resize-tl, &.window-resize-l, &.window-resize-bl { @apply left-0; }
        &.window-resize-tr, &.window-resize-r, &.window-resize-br { @apply right-0; }
        &.window-resize-t, &.window-resize-b { @apply left-8 right-8 h-4 cursor-ns-resize; }
        &.window-resize-l, &.window-resize-r { @apply top-8 bottom-8 w-4 cursor-ew-resize; }
        &.window-resize-tl, &.window-resize-br { @apply cursor-nwse-resize; }
        &.window-resize-tr, &.window-resize-bl { @apply cursor-nesw-resize; }
    }

    &.window-focus {
        @apply z-[30000];
        div.window-title-bar {
            @apply bg-darkblue text-base-100;
        }
    }

    &.window-maximized {
        @apply z-[31000];
    }
}

div.window-drag-area {
    @apply absolute z-[40000] pointer-events-none;
    border: dashed 8px red;
    border-image: url("border/border-red.png") 25% round;
    border-image-repeat: round;
}

div.wizard-window {
    @apply h-full mx-8 my-10;
    @apply grid grid-cols-[256px,1fr] grid-rows-[1fr,48px] gap-16;
    div.wizard-banner {
        box-shadow: inset -2px -2px 0 0 var(--base-100), inset 2px 2px 0 0 var(--base-300);
        @apply flex flex-row justify-center items-center;
    }
    div.wizard-content {
        @apply flex flex-col;
    }
    div.wizard-footer {
        @apply flex flex-row justify-end items-center;
        @apply relative col-span-full;
        &:before {
            content: "";
            @apply absolute -top-8 left-0 right-0;
            @apply w-full h-2 bg-base-300;
            @apply border-b-2 border-r-2 border-base-100;
        }
        button {
            @apply w-64 h-20 text-lg font-normal;
            @apply flex justify-center items-center;
        }
    }
}

div.explorer-window {
    @apply w-full h-full flex flex-col gap-2 select-none;

    div.explorer-toolbar {
        @apply p-2 mt-2 flex flex-col;
        box-shadow: inset -2px -2px 0 0 var(--base-100),
            inset 2px 2px 0 0 var(--base-300),
            inset -4px -4px 0 0 var(--base-300),
            inset 4px 4px 0 0 var(--base-100);

        > div:not(.separator) {
            @apply px-4 py-2;
            @apply flex flex-row items-center gap-2;
        }

        div.separator {
            @apply w-full h-2 bg-base-300 border-b-2 border-b-base-100;
        }

        button {
            @apply h-16 px-8 font-normal;
        }

        div.explorer-buttons {
            button {
                @apply h-40 flex flex-col justify-center items-center;
                img {
                    @apply h-14;
                }
            }
            button:not(.btn-dropdown) {
                @apply w-48;
            }
        }

        div.explorer-address {
            @apply gap-4;
            form {
                @apply w-full flex flex-row items-center gap-2;
                input {
                    @apply w-full;
                }
                button {
                    @apply h-20;
                }
            }
        }
    }

    div.explorer-content {
        @apply h-full py-8 bg-base-100;
        @apply flex flex-row;

        box-shadow: inset -2px -2px 0 0 var(--base-100),
            inset 2px 2px 0 0 var(--base-300),
            inset -4px -4px 0 0 var(--base-200),
            inset 4px 4px 0 0 var(--base-900);

        button.explorer-icon {
            @apply relative w-56 h-56;
            @apply flex flex-col items-center gap-4;
            img {
                @apply w-24 h-24;
            }
            span {
                @apply px-1 text-xl;
                line-height: 100%;
            }

            &:focus {
                span {
                    border: dashed 2px var(--base-900);
                    border-image: url("border/border-white.png") 25% round;
                    border-image-repeat: round;
                    @apply bg-blue text-base-100;
                }
            }

            .folder-lock {
                @apply absolute top-16 right-8;
                @apply w-8 h-11;
            }
        }
    }

    div.explorer-footer {
        @apply h-32;
        @apply grid grid-cols-2 gap-2;
        div {
            @apply px-2 flex flex-row justify-start items-center gap-2;
            box-shadow: inset -2px -2px 0 0 var(--base-100), inset 2px 2px 0 0 var(--base-300);
            span {
                @apply text-lg;
            }
            img {
                @apply h-12;
            }
        }
    }
}

div.error-window  {
    @apply h-full mx-8;
    @apply grid grid-rows-[1fr,48px] gap-2;

    div.error-content {
        @apply grid grid-cols-[32px,1fr] items-center content-center gap-x-4 gap-y-2;
        img {
            @apply w-32;
        }
        h1 {
            @apply text-2xl font-bold;
        }
        span {
            @apply col-span-full;
        }
    }
    div.error-footer {
        @apply flex flex-row justify-end items-center;
        @apply relative py-4;
        &:before {
            content: "";
            @apply absolute -top-4 left-0 right-0;
            @apply w-full h-2 bg-base-300;
            @apply border-b-2 border-r-2 border-base-100;
        }
        button {
            @apply w-64 h-20 text-lg font-normal;
            @apply flex justify-center items-center;
        }
    }
}

